--- a/Countdown/assets/css/style.css
+++ b/Countdown/assets/css/style.css
@@ -2,7 +2,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  color: white;
 }
 
 :root, button, input {
@@ -10,14 +9,25 @@
   font-size: 10px;
 }
 
+body {
+  height: 100vh;
+
+  background-image: url(../images/Abstract-Envelope.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  justify-content: center;
   min-height: 100vh;
-  background-color: #444;
-
   font-size: 1.6rem;
 }
 
+section {
+  display: flex;
+  flex-direction: column;
+}
